# new_ai_agent

./: .gitignore  README.md  app.py  azure_openai_example.py  knowledge_base_RAG.py  main.py  pyproject.toml
agents/: agent_team.py  finance_agent.py  google.py  knowledge_base_agent.py  web_search_agent.py
knowledge_base/: knowledge_base.py
