[project]
name = "new-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "duckduckgo-search>=7.5.2",
    "groq>=0.19.0",
    "openai>=1.66.3",
    "packaging>=24.2",
    "pgvector>=0.3.6",
    "phidata>=2.7.10",
    "psycopg>=3.2.6",
    "pypdf>=5.3.1",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.39",
    "yfinance>=0.2.54",
]
